refactor the skill and the inventory